# t_vector

./: .gitignore  CMakeLists.txt  Makefile  README.md  t_vector.h
.github/workflows/: check.yml  run_tests.yml
aux/: check.sh  format.sh
include/: ft_optional.h  t_optional.h  t_type.h  t_vector.h
src/: accessor.c  construct.c  destruct.c
src/optional/: t_optional.c
test/: CMakeLists.txt
test/Unity/: CMakeLists.txt
test/src/: allocation.c  main.c  test.c
